--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="description" content="Learn programming at the best school">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/b096d77226/UntitledProject/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../pictures/school.png"/>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/style1.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./pictures/school.png"/>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style1.css">
     
     <title>LB Courses</title>
 
@@ -27,16 +27,16 @@
             <nav class="nav" id="nav">
                 <ul class="menu">
                     <li class="menuItem select"><a href="index.html" class="menuLink select">Home</a></li>
-                    <li class="menuItem"><a href="courses.html" class="menuLink">Courses</a></li>
-                    <li class="menuItem"><a href="teachers.html" class="menuLink">Teachers</a></li>
-                    <li class="menuItem"><a href="contacts.html" class="menuLink">Contacts</a></li>
+                    <li class="menuItem"><a href="/html/courses.html" class="menuLink">Courses</a></li>
+                    <li class="menuItem"><a href="/html/teachers.html" class="menuLink">Teachers</a></li>
+                    <li class="menuItem"><a href="/html/contacts.html" class="menuLink">Contacts</a></li>
                 </ul>
             </nav>
         </div>
     </header>  
 
     <div class="banner">
-        <img src="../pictures/banner.jpg" alt="banner">
+        <img src="./pictures/banner.jpg" alt="banner">
         <div class="bannerContent">
             <h2 class="bannerTitle">The Best Course School</h2>
             <p class="bannerTxt">E-Learning in a practical and easy way!</p>
@@ -47,17 +47,17 @@
             <div class="mainContent">
                 <section class="info">
                     <article class="infoColumn">
-                        <img src="../pictures/php.jpg" class="infoImg" alt="Article 1">
+                        <img src="./pictures/php.jpg" class="infoImg" alt="Article 1">
                         <h2 class="infoTitle"> PHP 7</h2>
                         <p class="infoTxt">This is the new PHP 7 course, learn all about this language for web development!</p>
                     </article>
                     <article class="infoColumn">
-                        <img src="../pictures/web.jpg" class="infoImg" alt="Article 2">
+                        <img src="./pictures/web.jpg" class="infoImg" alt="Article 2">
                         <h2 class="infoTitle">Web Programming</h2>
                         <p class="infoTxt">This is the new Web Programming course, learn everything about Html, Css, JavaScript, PHP and more!</p>
                     </article>
                     <article class="infoColumn">
-                        <img src="../pictures/asp.jpg" class="infoImg" alt="Article 3">
+                        <img src="./pictures/asp.jpg" class="infoImg" alt="Article 3">
                         <h2 class="infoTitle"> ASP NET MVC course</h2>
                         <p class="infoTxt">This is the new Asp net mvc course, we have more than 10 complete courses in this area!</p>
                     </article>
@@ -65,28 +65,28 @@
                 <section class="courses">
                     <h2 class="sectionTitle">Course categories</h2>
                     <div class="coursesColumn">
-                        <img src="../pictures/catweb.jpg" class="coursesImg" alt="Courses WEB">
+                        <img src="./pictures/catweb.jpg" class="coursesImg" alt="Courses WEB">
                         <div class="coursesDesc">
                             <h2 class="coursesTitle">WEB Design</h2>
                             <p class="coursesTxt">In the category of WEB Design and web programming you learn to create websites and web systems, there are more than 60 courses in this area!</p>                      
                         </div>
                     </div>
                     <div class="coursesColumn">
-                        <img src="../pictures/catgames.jpg" class="coursesImg" alt="Courses Unity">
+                        <img src="./pictures/catgames.jpg" class="coursesImg" alt="Courses Unity">
                         <div class="coursesDesc">
                             <h2 class="coursesTitle">Game programming</h2>
                             <p class="coursesTxt">In the game programming category you learn to create 3d and 2d games on multiple platforms!</p>                      
                         </div>
                     </div>
                     <div class="coursesColumn">
-                        <img src="/pictures/catapp.jpg" class="coursesImg" alt="Courses Android Studio">
+                        <img src="./pictures/catapp.jpg" class="coursesImg" alt="Courses Android Studio">
                         <div class="coursesDesc">
                             <h2 class="coursesTitle">Mobile application</h2>
                             <p class="coursesTxt">In the category of Mobile application programming you learn to create your own applications for Smartphones!</p>                      
                         </div>
                     </div>
                     <div class="coursesColumn">
-                        <img src="../pictures/catnetworks.jpg" class="coursesImg" alt="Courses Networks">
+                        <img src="./pictures/catnetworks.jpg" class="coursesImg" alt="Courses Networks">
                         <div class="coursesDesc">
                             <h2 class="coursesTitle">Networks and Servers</h2>
                             <p class="coursesTxt">In the Networks category you learn to work with servers and network management!</p>                      
@@ -103,8 +103,8 @@
                 <a href="https://pt-br.facebook.com/" class="icon-facebook" target="_blank"></a>
                 <a href="https://twitter.com/login?lang=pt" class="icon-twitter" target="_blank"></a>    
                 <a href="https://www.youtube.com/" class="icon-youtube" target="_blank"></a>
-                <a href="https://web.whatsapp.com/" class="icon-whatsapp" title="+55 (38) 99875-7410" target="_blank"></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox" class="icon-email" title="brantlauro@gmail.com" target="_blank"></a>
+                <a href="https://web.whatsapp.com/" class="icon-whatsapp" title="+55 (38) 99875-7909" target="_blank"></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" class="icon-email" title="brantlauro@hotmail.com" target="_blank"></a>
             </div>
             <p class="direitos">Lauro Brant's courses - All rights reserved</p>
         </div>
@@ -113,4 +113,4 @@
 </body>
 </html> 
 
-<script type="text/javascript" src="../js/menu.js"></script>
+<script type="text/javascript" src="./js/menu.js"></script>
