javascript aded again

--- a/html/index.html
+++ b/html/index.html
@@ -27,9 +27,9 @@
             <nav class="nav" id="nav">
                 <ul class="menu">
                     <li class="menuItem select"><a href="index.html" class="menuLink select">Home</a></li>
-                    <li class="menuItem"><a href="/courses.html" class="menuLink">Courses</a></li>
-                    <li class="menuItem"><a href="/teachers.html" class="menuLink">Teachers</a></li>
-                    <li class="menuItem"><a href="/contacts.html" class="menuLink">Contacts</a></li>
+                    <li class="menuItem"><a href="courses.html" class="menuLink">Courses</a></li>
+                    <li class="menuItem"><a href="teachers.html" class="menuLink">Teachers</a></li>
+                    <li class="menuItem"><a href="contacts.html" class="menuLink">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -113,4 +113,4 @@
 </body>
 </html> 
 
-<script type="text/javascript" src="./js/menu.js"></script>
+<script type="text/javascript" src="../js/menu.js"></script>
